fix image upload align for profile edit

--- a/blog/static/blog/site.css
+++ b/blog/static/blog/site.css
@@ -1608,6 +1608,7 @@ nav a {
 
   .post_image_upload_wrapper {
     flex-direction: column;
+    margin-top: 0;
   }
 
   .post_image_upload_preview {
